--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@gridsome/remark-prismjs": "^0.4.0",
     "@gridsome/source-wordpress": "^0.5.3",
+    "axios": "^0.20.0",
     "gridsome": "^0.7.0",
     "gridsome-plugin-feed": "^1.0.2",
     "gridsome-plugin-rss": "^1.2.0",
