--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@gridsome/remark-prismjs": "^0.4.0",
     "@gridsome/source-wordpress": "^0.5.3",
     "axios": "^0.20.0",
+    "dotenv": "^8.2.0",
     "gridsome": "^0.7.0",
     "gridsome-plugin-feed": "^1.0.2",
     "gridsome-plugin-rss": "^1.2.0",
