全文検索対応

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@gridsome/source-wordpress": "^0.5.3",
     "axios": "^0.20.0",
     "dotenv": "^8.2.0",
+    "flexsearch": "^0.6.32",
     "gridsome": "^0.7.0",
     "gridsome-plugin-feed": "^1.0.2",
     "gridsome-plugin-rss": "^1.2.0",
+    "kuromojin": "^2.0.0",
     "prismjs": "^1.21.0"
   }
 }
