--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gridsome-plugin-rss": "^1.2.0",
     "kuromojin": "^2.0.0",
     "medium-zoom": "^1.0.6",
-    "prismjs": "^1.21.0"
+    "prismjs": "^1.21.0",
+    "vue-read-progress": "^1.0.4"
   }
 }
