--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install modules
       run: yarn
     - name: Run build
-      run: gridsome build
+      run:  ./node_modules/bin/gridsome build
     - name: Setup Git Config
       run: |
         git config --local user.email "1858830+retrorocket@users.noreply.github.com"
