--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,16 @@ jobs:
       run: yarn
     - name: Run build
       run:  ./node_modules/.bin/gridsome build
+    - name: Deploy to test
+      uses: trendyminds/github-actions-rsync@master
+        with:
+          RSYNC_OPTIONS: -avz
+          RSYNC_TARGET: ${{secrets.DEPLOY_PATH}}
+          RSYNC_SOURCE: ./dist/
+        env:
+          SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
+          SSH_USERNAME: ${{secrets.SSH_USERNAME}}
+          SSH_HOSTNAME: ${{secrets.SSH_HOSTNAME}}
     - name: Setup Git Config
       run: |
         git config --local user.email "1858830+retrorocket@users.noreply.github.com"
