--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,16 +22,16 @@ jobs:
       run: yarn
     - name: Run build
       run:  ./node_modules/.bin/gridsome build
-    - name: Deploy to test
-      uses: trendyminds/github-actions-rsync@master
+    - name: rsync deployments
+      uses: burnett01/rsync-deployments@4.1
       with:
-        RSYNC_OPTIONS: -avz
-        RSYNC_TARGET: ${{secrets.DEPLOY_PATH}}
-        RSYNC_SOURCE: ./dist/
-      env:
-        SSH_PRIVATE_KEY: ${{secrets.SSH_PRIVATE_KEY}}
-        SSH_USERNAME: ${{secrets.SSH_USERNAME}}
-        SSH_HOSTNAME: ${{secrets.SSH_HOSTNAME}}
+        switches: -avzr
+        path: dist/
+        remote_path: ${{secrets.DEPLOY_PATH}}
+        remote_host: ${{secrets.SSH_HOSTNAME}}
+        remote_port: ${{secrets.SSH_PORT}}
+        remote_user: ${{secrets.SSH_USERNAME}}
+        remote_key: ${{secrets.SSH_PRIVATE_KEY}}
     - name: Setup Git Config
       run: |
         git config --local user.email "1858830+retrorocket@users.noreply.github.com"
