--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gridsome-plugin-feed": "^1.0.2",
     "kuromojin": "^2.0.0",
     "medium-zoom": "^1.0.6",
+    "resize-observer-polyfill": "^1.5.1",
     "vue-read-progress": "^1.0.4"
   }
 }
