--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "kuromojin": "^2.0.0",
     "medium-zoom": "^1.0.6",
     "resize-observer-polyfill": "^1.5.1",
+    "universal-dom-parser": "^0.0.3",
     "vue-read-progress": "^1.0.4"
   }
 }
