--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,18 @@ jobs:
         uses: actions/checkout@v2
       - name: echo env
         run: echo "${{ secrets.API_URL }}" > .env
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Cache node_modules
+        uses: actions/cache@v2
+        id: yarn-cache 
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('yarn.lock') }}
+          restore-keys: ${{ runner.os }}-yarn-
       - name: Install modules
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
         run: yarn
       - name: Run build
         run: yarn gridsome build > /dev/null
