--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@gridsome/cli": "^0.3.4",
     "@gridsome/plugin-sitemap": "^0.4.0",
     "@gridsome/source-wordpress": "^0.5.3",
-    "flexsearch": "^0.6.32",
     "gridsome": "^0.7.21",
     "gridsome-plugin-feed": "^1.0.2",
     "kuromojin": "^2.0.0",
+    "lunr": "^2.3.9",
+    "lunr-languages": "^1.4.0",
     "medium-zoom": "^1.0.6",
     "resize-observer-polyfill": "^1.5.1",
     "universal-dom-parser": "^0.0.3",
