--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "dependencies": {
     "@gridsome/cli": "^0.3.4",
     "@gridsome/plugin-sitemap": "^0.4.0",
-    "@gridsome/source-wordpress": "^0.5.3",
+    "@gridsome/remark-prismjs": "^0.5.0",
+    "@gridsome/source-filesystem": "^0.6.2",
+    "@gridsome/transformer-remark": "^0.6.4",
+    "axios": "^0.21.1",
     "flexsearch": "^0.6.32",
     "gridsome": "^0.7.21",
     "gridsome-plugin-feed": "^1.0.2",
+    "gridsome-remark-figure-caption": "^1.2.0",
     "kuromojin": "^2.0.0",
+    "luxon": "^1.27.0",
     "medium-zoom": "^1.0.6",
     "resize-observer-polyfill": "^1.5.1",
     "universal-dom-parser": "^0.0.3",
