--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,10 +44,12 @@ jobs:
       - name: Commit files
         run: |
           if ! git diff --exit-code --quiet
-          git config --local user.email "1858830+retrorocket@users.noreply.github.com""
-          git config --local user.name "github-actions[bot]"
-          git add .
-          git commit -m "Add changes" -a
+          then
+            git config --local user.email "1858830+retrorocket@users.noreply.github.com""
+            git config --local user.name "github-actions[bot]"
+            git add .
+            git commit -m "Add changes" -a
+          fi
       - name: Push changes
         continue-on-error: true
         uses: ad-m/github-push-action@master
