--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,10 +46,10 @@ jobs:
           git add -N .
           if ! git diff --exit-code --quiet
           then
-            git config --local user.email "1858830+retrorocket@users.noreply.github.com""
+            git config --local user.email "1858830+retrorocket@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
             git add .
-            git commit -m "Add changes" -a
+            git commit -m "Add changes from actions" -m
           fi
       - name: Push changes
         continue-on-error: true
