--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
             git config --local user.email "1858830+retrorocket@users.noreply.github.com"
             git config --local user.name "github-actions[bot]"
             git add .
-            git commit -m "Add changes from actions" -m
+            git commit -m "Add changes from actions"
           fi
       - name: Push changes
         continue-on-error: true
