--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
+          repository: retrorocket/blog-contents
+          path: content
           submodules: true
           token: ${{ secrets.PERSONAL_TOKEN }}
       - name: Update submodule
