--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,7 @@ jobs:
           remote_key: ${{secrets.SSH_PRIVATE_KEY}}
       - name: Commit files
         run: |
+          git add -N .
           if ! git diff --exit-code --quiet
           then
             git config --local user.email "1858830+retrorocket@users.noreply.github.com"
