--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "flexsearch": "^0.6.32",
     "gridsome": "^0.7.21",
     "gridsome-plugin-feed": "^1.0.2",
+    "gridsome-plugin-pwa": "^0.0.18",
     "gridsome-remark-figure-caption": "^1.2.0",
     "kuromojin": "^2.0.0",
     "luxon": "^1.27.0",
     "medium-zoom": "^1.0.6",
     "resize-observer-polyfill": "^1.5.1",
-    "universal-dom-parser": "^0.0.3",
     "vue-read-progress": "^1.0.4",
     "vue-recaptcha-v3": "^1.9.0"
   }
