--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,29 +37,9 @@ jobs:
       - name: rsync deployments
         uses: burnett01/rsync-deployments@4.1
         with:
-          switches: -avzr --exclude "/archives" --exclude "/assets"
+          switches: -avzr --delete --exclude "/.well-known"
           path: dist/
           remote_path: ${{secrets.DEPLOY_PATH}}
-          remote_host: ${{secrets.SSH_HOSTNAME}}
-          remote_port: ${{secrets.SSH_PORT}}
-          remote_user: ${{secrets.SSH_USERNAME}}
-          remote_key: ${{secrets.SSH_PRIVATE_KEY}}
-      - name: rsync deployments archives
-        uses: burnett01/rsync-deployments@4.1
-        with:
-          switches: -avzr --delete
-          path: dist/archives/
-          remote_path: ${{secrets.DEPLOY_PATH}}/archives
-          remote_host: ${{secrets.SSH_HOSTNAME}}
-          remote_port: ${{secrets.SSH_PORT}}
-          remote_user: ${{secrets.SSH_USERNAME}}
-          remote_key: ${{secrets.SSH_PRIVATE_KEY}}
-      - name: rsync deployments assets
-        uses: burnett01/rsync-deployments@4.1
-        with:
-          switches: -avzr --delete
-          path: dist/assets/
-          remote_path: ${{secrets.DEPLOY_PATH}}/assets
           remote_host: ${{secrets.SSH_HOSTNAME}}
           remote_port: ${{secrets.SSH_PORT}}
           remote_user: ${{secrets.SSH_USERNAME}}
