--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,10 @@ jobs:
     name: build
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Checkout other repo
+      - name: Checkout repos
         uses: actions/checkout@v2
         with:
-          repository: retrorocket/blog-contents
-          path: content
+          submodule: recursive
           token: ${{ secrets.PERSONAL_TOKEN }}
       #- name: Update submodule
       #  run: |
