--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "medium-zoom": "^1.0.6",
     "resize-observer-polyfill": "^1.5.1",
     "vue-read-progress": "^1.0.4"
-  }
+  },
+  "packageManager": "yarn@3.4.1"
 }
